@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2025-06-08T01:08:07Z",
+  "timestamp" : "2025-06-19T01:02:52Z",
   "count_outdated" : 102,
   "uniques_outdated" : 84,
-  "count" : 103,
-  "uniques" : 85,
+  "count" : 104,
+  "uniques" : 86,
   "clones" : [
     {
       "timestamp": "2025-06-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-06-18T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
